--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 	margin: auto;
-	width:900px;
+	width:1000px;
 	text-align: center;
 	padding-top: 50px;
 }
@@ -8,4 +8,11 @@ body{
 #main{
 	margin-top: 30px;
 }
+ul{
+	list-style-type: none;
+}
+.images{
+	float: left;
+	border: 2px black solid;
 
+}
